--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Marcos Magalhães",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
